# libconfig

./: .gitignore  Doxyfile  meson.build  meson_options.txt  readme.md
build-config/: meson.build
build-config/glaze/: meson.build
build-config/reflect-cpp/: meson.build
build-config/reflect-cpp/include/: yyjson.h
build-config/yaml-cpp/: meson.build
cross/: wasm.ini
docs/html/: _logo_8png.html  annotated.html  annotated_dup.js  ansi_8h.html  ansi_8h.js  ansi_8h__dep__incl.map  ansi_8h__dep__incl.md5  ansi_8h__incl.map  ansi_8h__incl.md5  base_8h.html  base_8h.js  base_8h__dep__incl.map  base_8h__dep__incl.md5  base_8h__incl.map  base_8h__incl.md5  classes.html  classfourdst_1_1config_1_1_config-members.html  classfourdst_1_1config_1_1_config.html  classfourdst_1_1config_1_1_config.js  classfourdst_1_1config_1_1_config__coll__graph.map  classfourdst_1_1config_1_1_config__coll__graph.md5  classfourdst_1_1config_1_1exceptions_1_1_config_error-members.html  classfourdst_1_1config_1_1exceptions_1_1_config_error.html  classfourdst_1_1config_1_1exceptions_1_1_config_error.js  classfourdst_1_1config_1_1exceptions_1_1_config_error__coll__graph.map  classfourdst_1_1config_1_1exceptions_1_1_config_error__coll__graph.md5  classfourdst_1_1config_1_1exceptions_1_1_config_error__inherit__graph.map  classfourdst_1_1config_1_1exceptions_1_1_config_error__inherit__graph.md5  classfourdst_1_1config_1_1exceptions_1_1_config_load_error-members.html  classfourdst_1_1config_1_1exceptions_1_1_config_load_error.html  classfourdst_1_1config_1_1exceptions_1_1_config_load_error.js  classfourdst_1_1config_1_1exceptions_1_1_config_load_error__coll__graph.map  classfourdst_1_1config_1_1exceptions_1_1_config_load_error__coll__graph.md5  classfourdst_1_1config_1_1exceptions_1_1_config_load_error__inherit__graph.map  classfourdst_1_1config_1_1exceptions_1_1_config_load_error__inherit__graph.md5  classfourdst_1_1config_1_1exceptions_1_1_config_parse_error-members.html  classfourdst_1_1config_1_1exceptions_1_1_config_parse_error.html  classfourdst_1_1config_1_1exceptions_1_1_config_parse_error.js  classfourdst_1_1config_1_1exceptions_1_1_config_parse_error__coll__graph.map  classfourdst_1_1config_1_1exceptions_1_1_config_parse_error__coll__graph.md5  (+165 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  concepts_0.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+16 more)
docs/static/: mainpage.md
examples/: cli_example.cpp  config_example.toml  config_example.yml  meson.build  simple.cpp  wasm.cpp
src/config/: meson.build
src/config/include/fourdst/config/: ansi.h  base.h  cli.h  config.h  registry.h  validate.h
src/config/include/fourdst/config/exceptions/: exceptions.h
src/config/lib/: config.cpp
src/config/private/: config.cpp
src/config/public/: config.h
subprojects/: glaze.wrap  yaml-cpp.wrap
tests/: meson.build
tests/config/: configTest.cpp  example.yaml  meson.build  test_schema.h
tests/config/example_config_files/: example.good.missing.field.toml  example.good.toml  example.incorrectarraysize.toml  example.invalidtype.toml  example.missing.nondefault.field.toml  example.unknownkey.toml
