option('pkg_config', type: 'boolean', value: true, description: 'generate pkg-config file for libconfig (fourdst_config.pc)')
option('build_tests', type: 'boolean', value: true, description: 'Build unit and integration tests (uses gtest)')
option('build_examples', type: 'boolean', value: true, description: 'Build simple example programs')
